@@ -2117,6 +2117,11 @@
 	* Fixed begin_jp1.js.
 	* Script formatting changes I missed last revision.
 
+2012-09-18  GoldenKevin  (revision 141)
+
+	* Revisited ScheduledHashedWheelExecutor. Rewrote all thread-unsafe code,
+	corrected the broken invokeAll and invokeAny methods, and cleaned up.
+
 Copyright 2011-2012 GoldenKevin
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.
